Rich Media extension ChangeLog
=============================

VERSION 1.5.2

  FEATURES:
	-none-

  CHANGES:
	* Use ResourceLoader for script loading if available

  BUGFIXES:
	-none-

VERSION 1.5.2

  FEATURES:
	* Added  profiling information to trace code execution time

  CHANGES:
	* The inclusion of namespace for SF can be handled with the setting "$smwgRMPasteNSForFiles"
	* Provided new patch to let Rich Media extension be compatible with SF 2.1.2 and MW 1.16.4
	* Migrate upload functionality from PrototypeJS to jQuery.

  BUGFIXES:
	* 11353 - When uploaded text has something that looks like wikitext, its sometimes interpreted
	* 15332 - Richmedia sandbox generates wrong query
	* 15028 - Duplicate warnings in upload window are ignored
	* 15037 - Fatal error in RM_Form.php
	* 14956 - Wrong jQuery selector broke upload process.
	* 14592 - SemanticForms uses "for ... in" loops in its JavaScript (moved patch part from RM to SF)
	* 14570 - Refresh Error after installation of the richmedia extension
	* 14991 - Add style version to css and js includes to improve (loading) performance


VERSION 1.5.1

  FEATURES:
	* FR 12239: Overlay window automatically resize based on the image properties.

  CHANGES:
	* Added mime info and mime type (video/x-ms-wmv) for .wmv
	* Provided new patches to let Rich Media extension be compatible with MediaWiki 1.16.1 and SF 2.0.8

  BUGFIXES:
	* Issue 13164 - WebDAV not working due to strict standards warning.
	* Issue 12704 - Changed embedding of files in FileViewer
	* Issue 13549 - Small GUI improvements
	* Issue 11339 - Updated XPdf to 3.02pl5


VERSION 1.5.0

  CHANGES:
	* Issue 12237 - Text "Description page" changed to "File details"
	* Issue 12568. Disabled aggressively preload of all images in links to Special:EmbedWindow.
	* Issue 11837 - WebDAV now uses /images as upload directory
	* Added support for Semantic Forms 2.0
	* Provided new patches to let Rich Media extension be compatible with MediaWiki 1.16.

  BUGFIXES: